tests/codegen/fail/enum/derive_name_double_underscored.rs
use coasys_juniper::GraphQLEnum;

#[derive(GraphQLEnum)]
enum __Test {
    Test,
}

fn main() {}
